--- a/frontend/src/pages/AuthPage.scss
+++ b/frontend/src/pages/AuthPage.scss
@@ -13,6 +13,13 @@ body {
       margin: 0 auto;
       padding-top: 2em;
 
+      .errorMsg {
+        background: pink;
+        padding: 0.7em 0;
+        color: white;
+        text-align: center;
+      }
+
       .form-group {
         display: block;
         font-size: 1.2em;
